# ComplexMatrixProcessor

Matrices/: .gitignore  CMakeLists.txt  Matrices.sln  MyProject.sln  MyProject.vcxproj  MyProject.vcxproj.filters  main  main.cpp
Matrices/Debug/MyProject.tlog/: CL.command.1.tlog
Matrices/Matrices/: ComplexNumbers.h  Decompositions.h  Matrices.vcxproj  Matrices.vcxproj.filters  Matrix.h  RectangularMatrixDecomposition.h  Source.cpp  SquareMatrix.h  SquareMatrixDecompositions.h
Matrices/Matrices/Debug/: vc143.idb
Matrices/Matrices/Debug/Matrices.tlog/: Matrices.lastbuildstate
Matrices/Matrices/x64/Debug/: vc143.idb
Matrices/Matrices/x64/Debug/Matrices.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Matrices.lastbuildstate
Matrices/MyProject/: CMakeLists.txt
Matrices/MyProject/Debug/: vc143.idb
Matrices/MyProject/Debug/MyProject.tlog/: MyProject.lastbuildstate
Matrices/MyProject/MyProject/Debug/MyProject.tlog/: CL.command.1.tlog  MyProject.lastbuildstate
Matrices/MyProject/decompositions/: CMakeLists.txt
Matrices/algebra/: CMakeLists.txt  MatrixOperations.h
Matrices/algebra/MatrixOperations/: MatrixOperations.cpp
Matrices/algebra/MatrixProperties/: MatrixProperties.h
Matrices/algebra/Norms/: Norms.cpp  Norms.h
Matrices/core/: CMakeLists.txt
Matrices/core/ComplexNumber/: ComplexNumber.cpp  ComplexNumber.h
Matrices/core/Matrix/: Matrix.cpp  Matrix.h
Matrices/core/SquareMatrix/: SquareMatrix.cpp  SquareMatrix.h
Matrices/decompositions/: CMakeLists.txt
Matrices/include/matrixlib/algebra/: common_functions.h  matrix_operations.h  matrix_properties.h  norms.h  numerical_characteristics.h
Matrices/include/matrixlib/core/: column.h  matrix.h  square_matrix.h  type_traits.h
Matrices/include/matrixlib/decompositions/: lup_decomposition.h  qr_decomposition.h  svd_decompositions.h
Matrices/tests/: CMakeLists.txt
Matrices/tests/lup_test/: lup_decomposition_test.cpp
Matrices/tests/matrix_tests/: addition_test.cpp  double_matrices_addition.cpp  double_matrices_multiplication.cpp  double_matrices_substraction.cpp  float_matrices_addition.cpp  float_matrices_multiplication.cpp  float_matrices_substraction.cpp  iterator_methods_test.cpp  long_double_matrices_addition.cpp  long_double_matrices_substraction.cpp  matrix_addition_test.cpp  matrix_functions_test.cpp  matrix_multiplication_test.cpp  matrix_substitution_test.cpp
Matrices/tests/norms/: test_matrix_norms.cpp
Matrices/tests/numerical_characteristics/: matrix_numerical_characteristics.cpp
Matrices/tests/operations_test/: matrix_operations_test.cpp
Matrices/tests/properties_test/: matrix_properties_test.cpp
Matrices/x64/Debug/: vc143.idb
Matrices/x64/Debug/MyProject.tlog/: CL.command.1.tlog  MyProject.lastbuildstate
